--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "htmllint": "^0.7.2",
     "socket.io": "^4.4.1"
   },
+  "resolutions": {
+    "portscanner": "2.2.0"
+  },
   "scripts": {
     "start": "browser-sync docs -w",
     "lint": "npm run lint:js && npm run lint:html",
